# irssi

./: .travis.yml  README.otr  acconfig.h  configure.ac
docs/: signals.txt
src/: Makefile.am
src/fe-text/: irssi.c
src/otr/: Makefile.am  cmd.c  irssi-otr.h  key.c  key.h  module.c  otr-fe.c  otr-formats.c  otr-formats.h  otr-ops.c  otr.c  otr.h  utils.c  utils.h
